RESOLVED FIXED170767
[GStreamer] Dailymotion live stream videos don't play
https://bugs.webkit.org/show_bug.cgi?id=170767
Summary [GStreamer] Dailymotion live stream videos don't play
Carlos Garcia Campos
Reported 2017-04-12 02:17:41 PDT
The video shows a message saying that an error occurred and nothing is played. For some reason we are getting a 404 for the hls parts.
Attachments
Patch (19.25 KB, patch)
2017-04-17 10:25 PDT, Carlos Garcia Campos
no flags
Rebased patch (19.62 KB, patch)
2017-05-02 02:30 PDT, Carlos Garcia Campos
svillar: review+
Carlos Garcia Campos
Comment 1 2017-04-17 10:25:28 PDT
Carlos Garcia Campos
Comment 2 2017-05-02 02:30:53 PDT
Created attachment 308811 [details] Rebased patch
Sergio Villar Senin
Comment 3 2017-05-02 02:46:09 PDT
Comment on attachment 308811 [details] Rebased patch View in context: https://bugs.webkit.org/attachment.cgi?id=308811&action=review > Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:909 > + priv->redirectedURI = WTFMove(resolvedURI); This resolved/redirected naming is a bit confusing. > Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:956 > + I think this chunk of code deserves an explanation, it's pretty clear what it does but not why we need to do this.
Xabier Rodríguez Calvar
Comment 4 2017-05-02 02:58:11 PDT
Comment on attachment 308811 [details] Rebased patch View in context: https://bugs.webkit.org/attachment.cgi?id=308811&action=review > Source/WebCore/platform/graphics/gstreamer/WebKitWebSourceGStreamer.cpp:1119 > + m_resource = ResourceHandle::create(nullptr /*context*/, m_request, this, true, false); Nit: I don't see the need of having /*context*/.
Carlos Garcia Campos
Comment 5 2017-05-02 03:06:08 PDT
Note You need to log in before you can comment on or make changes to this bug.